# currency_converter

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build_deploy.yaml
docker/deploy/: Dockerfile  docker-compose.yaml
docker/local/: Dockerfile  docker-compose.yaml
src/: config.py  main.py  simbols.py
src/api/endpoints/: converter.py
src/api/services/: converter_service.py  coonverter_service.py
tests/: __init__.py  conftest.py  test_api.py
